fix cut line on mobile

--- a/scss/NewsDev.scss
+++ b/scss/NewsDev.scss
@@ -23,6 +23,9 @@
     }
 
     .timeline {
+        @media screen and (max-width: $md) {
+            margin-top: 0;
+        }
         margin-top: 30px;
         ul {
             margin-bottom: 45px;
