--- a/scss/Scans.scss
+++ b/scss/Scans.scss
@@ -24,6 +24,7 @@
             text-align: center;
             text-shadow: black 0.5px 0.5px;
             cursor: pointer;
+            margin-top: 0;
             i {
                 margin-left: 20px;
                 font-size: 25px;
